--- a/app/views/admin/mailing_lists/_form.html.erb
+++ b/app/views/admin/mailing_lists/_form.html.erb
@@ -6,6 +6,6 @@
 <%= form.text_field 'name' %></p>
 
 <p><label for="mailing_form_text"><%= t("Form Text") %></label><br/>
-<%= form.text_field 'form_text' %> This is what the user sees on the signup form.  i.e. Would you like to be notified when new products are released?</p>
+<%= form.text_field 'form_text' %> Esto es lo que el usuario ve en el formulario de registro. es decir, ¿Te gustaría ser notificado cuando se lanzan nuevos productos?</p>
 
 <!--[eoform:mailing_list]-->
