--- a/app/views/admin/mailing_lists/new.html.erb
+++ b/app/views/admin/mailing_lists/new.html.erb
@@ -1,8 +1,8 @@
-<h1><%= t("New Mailing List") %></h1>
+<h1><%= t("Nueva lista de distribución") %></h1>
 
 <% form_for [:admin, @mailing_list] do |f| %>
   <%= render :partial => f %>
-  <%= f.submit t("Create") %>
+  <%= f.submit t("Crear") %>
 <% end %>
 
-<%= link_to 'Back', admin_mailing_lists_path %>
+<%= link_to 'Atrás', admin_mailing_lists_path %>
